@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array (
 	'description' => 'Add modules to easily manage your records (insert, edit & export) in one place.',
 	'category' => 'module',
 	'shy' => 0,
-	'version' => '1.0.7',
+	'version' => '1.0.8',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
